--- a/app/views/pages/company.html.erb
+++ b/app/views/pages/company.html.erb
@@ -13,34 +13,33 @@
 		<h3>Compañia</h3>
 		<div class="bio">
 			<h5><strong><%= link_to "VR3", root_path %></strong> es un startup de Realidad Virtual en la Ciudad de México.</h5>
-      <br>
 			<p>Creamos experiencias interactivas para agencias, publicidad, mercadotecnia, casas productoras y cualquier 
-			empresa, compañía o particular interesado.</p>
+			empresa, compañía o particular.</p>
 			<p>VR3 nació como <strong>Vectorthree</strong>. Imaginado en una clase de videojuegos hace más de 4 años, Vectorthree fue formado por Oscar Chavez, Patrick Moss y Roberto Ramos, tres estudiantes del ITESM CCM, bajo el nombre legal de <strong>CG Logística SAPI de CV</strong>. 
-			Así como también fundamos <strong><a href="mxvr.co" target="_blank">MXVR</a></strong>, una comunidad abierta a todo el público sobre Realidad Virtual.</p>
+			Así como también fundamos <strong><a href="mxvr.co" target="_blank">MXVR</a></strong>, una comunidad abierta al público sobre Realidad Virtual y Realidad Aumentada.</p>
 		</div>
     <br>
-		<!--Oscar Chavez-->
+		
+    <!--Oscar Chavez-->
 		<div class="col-sm-6 col-md-6">
 			<%= image_tag "company/oscar.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
 			<h3>Oscar Chavez</h3>
-			<h5>Cofundador & CEO</h5>
-			<p>Director Comercial. Desarrollador Web Fullstack.</p>
+			<h5>Cofounder & CEO @ <%= link_to "VR3", root_path %></h5>
+			<p>Fullstack Web Developer. Engineering. Admin.</p>
 			<p>RoR. JS. C#. REST/API. SQL</p>
 			<p>Cofundador <%= link_to "MXVR", "http://mxvr.co" %>.</p>
 			<ul class="list-inline social-buttons">
-        <li><a href="http://twitter.com/oschvr" target="_blank"><i class="fa fa-twitter"></i></a>
-        </li>
-        <li><a href="http://instagram.com/oschvr" target="_blank"><i class="fa fa-instagram"></i></a>
-        </li>
+        <li><a href="http://github.com/oschvr" target="_blank"><i class="fa fa-github"></i></a></li>
+        <li><a href="http://twitter.com/oschvr" target="_blank"><i class="fa fa-twitter"></i></a></li>
       </ul>
 		</div>
-		<!--Patrick Moss-->
+		
+    <!--Patrick Moss-->
 		<div class="col-sm-6 col-md-6">
 			<%= image_tag "company/patrick.png", :class => "img-responsive img-circle", :style => "max-width: 50%; transform:translate(50%,0)" %>
 			<h3>Patrick Moss</h3>
-			<h5>Cofundador & CTO</h5>
-			<p>Director Tecnología. Desarrollador Principal. </p>
+			<h5>Cofounder & CTO @ <%= link_to "VR3", root_path %></h5>
+			<p>Unity3D Developer. Innovation. Sales</p>
 			<p>C#. JS. C++. PHP. Unity. OpenGL.</p>
 			<p>Cofundador <%= link_to "MXVR", "http://mxvr.co" %>.</p>
 			<ul class="list-inline social-buttons">
@@ -48,6 +47,44 @@
         </li>
       </ul>
 		</div>
+  </div>
+  
+  </br></br>
+  
+  <div class="row text-center">
+
+    <!--Gustavo L'Eglise-->
+    <div class="col-sm-6 col-md-6">
+      <%= image_tag "company/gustavo.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
+      <h3>Gustavo L'Eglise</h3>
+      <h5>Developer @ <%= link_to "VR3", root_path %></h5>
+      <p>Unity3D Developer. Web Developer</p>
+      <p>MEAN. Unity3D. C#.</p>
+      <ul class="list-inline social-buttons">
+        <!--li><a href="http://twitter.com/oschvr" target="_blank"><i class="fa fa-twitter"></i></a>
+        </li>
+        <!--li><a href="http://instagram.com/oschvr" target="_blank"><i class="fa fa-instagram"></i></a>
+        </li-->
+      </ul>
+    </div>
+
+    <!--Rodrigo Moreno-->
+    <div class="col-sm-6 col-md-6">
+      <%= image_tag "company/rodrigo.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
+      <h3>Rodrigo Moreno</h3>
+      <h5>Cofounder @ <%= link_to "Estudio Cromosoma", "http://www.estudiocromosoma.com" %></h5>
+      <p>3D Artist & Motion Graphics</p>
+      <p>Maya. C4D. Ps. Ai. Ae.</p>
+      <ul class="list-inline social-buttons">
+        <li><a href="http://www.estudiocromosoma.com" target="_blank"><i class="fa fa-hand-pointer-o"></i></a>
+        </li>
+        <li><a href="http://twitter.com/CromosomaMX" target="_blank"><i class="fa fa-twitter"></i></a>
+        </li>
+        <li><a href="http://instagram.com/rodro1126" target="_blank"><i class="fa fa-instagram"></i></a>
+        </li>
+      </ul>
+    </div>
+        
 		<!--Roberto Ramos-->
 		<!--div class="col-sm-3 col-md-4">
 			<%= image_tag "http://vr3.io/img/team/bob.png", :class => "img-responsive img-circle" %>
@@ -62,5 +99,8 @@
       </ul>
 		</div>
 	</div-->
+
 </div>
+</br>
+
 <hr>
