--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -10,7 +10,24 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Transmisiones en vivo</h2>
+        <h2 class="section-heading">Video Web <span class="btn btn-danger">LIVE</span> y en <span class="btn btn-info">VOD</span></h2>
+        <!--h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3-->
+      </div>
+      <div class="col-sm-6 col-md-6 col-lg-6">
+        
+      </div>
+      <div class="col-sm-6 col-md-6 col-lg-6">
+        
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Subservice:Marketing Section -->
+<section id="marketing">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Automatización y AI </h2>
         <!--h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3-->
       </div>
     </div>
@@ -31,18 +48,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Renta de equipo especializado</h2>
-        <!--h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3-->
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Subservice:Marketing Section -->
-<section id="marketing">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Activaciones Comerciales </h2>
+        <h2 class="section-heading">Renta y Activaciones Comerciales</h2>
         <!--h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3-->
       </div>
     </div>
