--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,6 @@
 <div id="projectspage"></div>
 
-<div id="full-blue">
+<div id="full-yellow">
   <div class="container">
     <div class="intro-text">
       <div class="intro-heading">Proyectos</div>
