--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -12,7 +12,7 @@
 	<div class="container">
 		<div class="col-lg-12 col-md-12">
 			<video controls muted autoplay>
-			  <source src="http://vectorthree.com/vr3/img/projects/<%= @project.client %>/video.webm" type="video/webm">
+			  <source src="http://vectorthree.com/vr3/img/projects/<%= @project.client %>/video.mp4" type="video/mp4">
 			  <source src="http://vectorthree.com/vr3/img/projects/<%= @project.client %>/video.webm" type="video/webm">
 				Your browser does not support the video tag.
 			</video>
@@ -35,7 +35,7 @@
 			  </div>
 			</div>
 		</div>
-		<div class="col-lg-12 col-md-12 text-center">
+		<div class="col-lg-12 col-md-12 text-center return-link">
 			<%= link_to "Regresar a proyectos", root_path(:anchor => "projects") %>
 		</div>
 		<br>
