--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -124,19 +124,6 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #222;
 }
 
-.btn-primary {
-  border-color: #fed136;
-  text-transform: uppercase;
-  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-weight: 700;
-  color: #fff;
-  background-color: #fed136;
-  &:hover, &:focus, &:active, &.active {
-    border-color: #f6bf01;
-    color: #fff;
-    background-color: #fec503;
-  }
-}
 
 .open .dropdown-toggle.btn-primary {
   border-color: #f6bf01;
@@ -144,80 +131,6 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #fec503;
 }
 
-.btn-primary {
-  &:active, &.active {
-    background-image: none;
-  }
-}
-
-.open .dropdown-toggle.btn-primary {
-  background-image: none;
-}
-
-.btn-primary {
-  &.disabled, &[disabled] {
-    border-color: #fed136;
-    background-color: #fed136;
-  }
-}
-
-fieldset[disabled] .btn-primary {
-  border-color: #fed136;
-  background-color: #fed136;
-}
-
-.btn-primary {
-  &.disabled:hover, &[disabled]:hover {
-    border-color: #fed136;
-    background-color: #fed136;
-  }
-}
-
-fieldset[disabled] .btn-primary:hover {
-  border-color: #fed136;
-  background-color: #fed136;
-}
-
-.btn-primary {
-  &.disabled:focus, &[disabled]:focus {
-    border-color: #fed136;
-    background-color: #fed136;
-  }
-}
-
-fieldset[disabled] .btn-primary:focus {
-  border-color: #fed136;
-  background-color: #fed136;
-}
-
-.btn-primary {
-  &.disabled:active, &[disabled]:active {
-    border-color: #fed136;
-    background-color: #fed136;
-  }
-}
-
-fieldset[disabled] .btn-primary:active {
-  border-color: #fed136;
-  background-color: #fed136;
-}
-
-.btn-primary {
-  &.disabled.active, &[disabled].active {
-    border-color: #fed136;
-    background-color: #fed136;
-  }
-}
-
-fieldset[disabled] .btn-primary.active {
-  border-color: #fed136;
-  background-color: #fed136;
-}
-
-.btn-primary .badge {
-  color: #fed136;
-  background-color: #fff;
-}
 
 .btn-xl {
   padding: 20px 40px;
@@ -487,6 +400,16 @@ div#full-blue{
   }
 }
 
+.return-link{
+  font-size: 1.25em;
+  padding-bottom: 20px;
+}
+
+.learnmore-link{
+  font-size: 1.25em;
+  padding-bottom: 10px;
+}
+
 //Video Container
 
 .landing{
@@ -514,7 +437,7 @@ div#full-blue{
   vertical-align: top;
 }
 
-video{
+.main-video{
   display: block;
   position: relative;
   top: 50%;
@@ -539,7 +462,7 @@ video{
   z-index: 2;
 
   //background-image: linear-gradient(to bottom right, #EB3349, #F45C43);
-  background: linear-gradient(to bottom, rgba(235, 51, 73, 0.8), rgba(244, 92, 67, 0.7));
+  background: linear-gradient(to bottom, rgba(235, 51, 73, 0.5), rgba(244, 92, 67, 0.4));
 }
 
 .overlay-text{
@@ -565,7 +488,7 @@ video{
 
 @media (max-width: 768px) {
 .video-overlay{
-  position: relative;
+position: relative;
   width: 100%;
   height: 90%;
   color: #fff;
@@ -644,7 +567,7 @@ video{
 }
 
 section {
-  padding: 100px 0;
+  padding: 75px 0;
   h2.section-heading {
     margin-top: 0;
     margin-bottom: 15px;
@@ -661,7 +584,7 @@ section {
 
 @media (min-width: 768px) {
   section {
-    padding: 100px 0;
+    padding: 75px 0;
   }
 }
 
