--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,9 +1,77 @@
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-<%= @job.position %>
-<%= @job.overview %>
-<%= @job.qualifications %>
+<div id="full-blue">
+  <div class="container">
+    <div class="intro-text">
+      <div class="intro-heading">Editar Vacante </div>
+      <div class="intro-heading"><u><%= @job.position %></u></div>
+    </div>
+  </div>
+</div>
+<section>
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-sm-12 col-lg-12">
+        <%= form_for @job do |p| %>
+
+        <%= image_tag("http://www.vectorthree.com/vr3/img/main/vr3_office.jpg", :class => "img-responsive") %>
+          </br>
+          </br>
+
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-addon">Posición</span>
+              <%= p.text_field :position, autofocus: true, :class => "form-control validate"%>
+            </div>        
+          </div>
+
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-addon">Ubicación</span>
+              <%= p.text_field :location, autofocus: true, :class => "form-control validate"%>
+            </div>        
+          </div>
+
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-addon">Salario</span>
+              <%= p.text_field :salary, autofocus: true, :class => "form-control validate"%>
+            </div>        
+          </div>
+
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-addon">Tipo</span>
+              <%= p.text_field :type, autofocus: true, :class => "form-control validate"%>
+            </div>        
+          </div>
+
+
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-addon">Descripción</span>
+              <%= p.text_area :overview, autofocus: true, :class => "form-control validate", :placeholder => "Descripción", rows: 10, cols: 10 %>
+            </div>        
+          </div>
+
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-addon">Responsabilidades</span>
+              <%= p.text_area :responsabilities, autofocus: true, :class => "form-control validate", :placeholder => "Descripción", rows: 10, cols: 10 %>
+            </div>        
+          </div>
+
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-addon">Cualidades Deseables</span>
+              <%= p.text_area :qualifications, autofocus: true, :class => "form-control validate", :placeholder => "Descripción", rows: 10, cols: 10 %>
+            </div>        
+          </div>
+
+
+          <%= link_to("Cancelar", @job , class: "btn btn-lg btn-danger") %>
+          <button class="btn btn-lg btn-primary float-right" type="submit" name="action">Actualizar Vacante</button>
+
+        <% end %>
+      </div>
+    </div>
+  </div>
+</section>
