--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -14,7 +14,7 @@
     </div>
     <h1>Por el momento, no hay vacantes abiertas. Vuelve pronto !</h1>
     <div class="col-sm-4 col-md-6 ">
-      <%= @jobs %>
+      <!--#%= @jobs %-->
       <div class="thumbnail">
         <div class="caption">
           <h3>Sr Web Developer (RoR)</h3>
