--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
   <div class="video-container">
     
     <div class="video-source">
-      <%= video_tag "videos/vr3.webm", autoplay: true, loop: true, muted: true%>
+      <%= video_tag "videos/vr3.webm", class: "main-video", autoplay: true, loop: true, muted: true%>
       <!--video autoplay loop muted src="http://vectorthree.com/vr3/img/main/vr3.webm" type="video/webm"></video-->
     </div>
 
@@ -18,8 +18,6 @@
     </div>
   </div>
 </div>
-
-
 
 <!--section id="subscribe" class="bg-darkest-gray">
   <div class="container">
