--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -13,10 +13,9 @@
       <div class="col-md-4 col-sm-4">
         <h3>SERVICIOS</h3>
         <ul class="list-unstyled quicklinks">
-          <a href="/services#streaming"><li>Streaming Web y VR</li></a>
-          <a href="/services#vr"><li>Realidad Virtual</li></a>
-          <a href="/services#ar"><li>Realidad Aumentada</li></a>
-          <a href="/services#commercial"><li>Renta y Activaciones Comerciales</li></a>
+          <a href="/services"><li>Streaming Web y VR</li></a>
+          <a href="/services"><li>VR / AR / MR</li></a>
+          <a href="/services"><li>Renta y Activaciones Comerciales</li></a>
         </ul>
       </div>
       <div class="col-md-4 col-sm-4">
@@ -31,10 +30,10 @@
     </div>
     <hr>
     <div class="row">
-      <div class="col-xs-6 col-md-4 col-sm-3">
+      <div class="col-xs-6 col-sm-3 col-md-4 col-lg-3">
         <span class="copyright">VR3 © 2017 | <strong>CGL SAPI de CV </strong></span>
       </div>
-      <div class="col-xs-6 col-md-2 col-sm-3">
+      <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
         <ul class="list-inline social-buttons">
           <li>
           <a href="http://twitter.com/vr3io" target="_blank"><i class="fa fa-twitter"></i></a>
@@ -47,12 +46,12 @@
           </li>
         </ul>
       </div>
-      <div class="col-xs-8 col-md-4 col-sm-3">
+      <div class="col-xs-8 col-sm-3 col-md-3 col-lg-3">
         <ul class="list-inline quicklinks">
           <li><a href="/privacy">Privacidad y Términos de Uso</a></li>
         </ul>
       </div>
-      <div class="col-xs-4 col-md-2 col-sm-3">
+      <div class="col-xs-4 col-sm-3 col-md-2 col-lg-3">
         <ul class="list-inline quicklinks">
           <% if !user_signed_in? %>
             <li>
@@ -66,7 +65,7 @@
               <%= link_to(current_user.username, edit_user_registration_path,  :class => "active") %>
             </li>
             <li>
-              <%= link_to("logout", destroy_user_session_path, :method => :delete,  :class => "active") %>
+              <%= link_to("Logout", destroy_user_session_path, :method => :delete,  :class => "active") %>
             </li>
           <% end %>
         </ul>
