--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -36,7 +36,7 @@
 					</div>
 
 					<div class="form-group">
-						<%= p.date_field :date, autofocus: true, :class => "form-control" %>
+						<input type="text" id="date" name="date" data-provide='datepicker' class="form-control" autofocus="true" placeholder="Fecha">
 					</div>
 
 					<button class="btn-xl btn-inverse" type="submit" name="action">Enviar</button>
