Added articles component. MVC Support for edit, new, index and show.

--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -50,10 +50,13 @@
             <%= link_to( "Nuevo Usuario", new_user_registration_path)  %>
           </li-->
           <li>
-            <%= link_to("Nuevo Proyecto", new_project_path) %>
+            <%= link_to("Proyecto", new_project_path) %>
           </li>
           <li>
-            <%= link_to("Nueva Vacante", new_job_path) %>
+            <%= link_to("Articulo", new_article_path) %>
+          </li>
+          <li>
+            <%= link_to("Vacante", new_job_path) %>
           </li>
           <li> <a>|</a> </li>
         <% end %>
