--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -252,6 +252,37 @@
     <br/>
   </div>
 </section>
+<!-- Press Section class="bg-light-gray" -->
+<section id="press">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Prensa</h2>
+      </div>
+    </div>
+    <br/>
+
+     <div class="row">
+      <% @articles.each do |a| %>
+        <%= link_to article_path(a.id) do %>
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+              <!--%= image_tag a.image_url, :class => "img-responsive"%-->
+              <div class="caption">
+                <h3><u><%= a.title %></u></h3>
+                <h4><%= a.source %></h4>
+                <h5><%= a.link %></h5>
+                <h5><%= a.created_at %></h5>
+                <p><%= a.body.truncate(90) %></p>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+
+  </div>
+</section>
 <!-- Contact Section -->
 <section id="contact">
   <div class="container">
