Updated references for static files. Now using http://static.vr3.io

--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -13,7 +13,7 @@
       <div class="col-sm-12 col-lg-12">
         <%= form_for @job do |p| %>
 
-        <%= image_tag("http://www.vectorthree.com/vr3/img/main/vr3_office.jpg", :class => "img-responsive") %>
+        <%= image_tag("http://www.static.vr3.io/vr3/img/main/vr3_office.jpg", :class => "img-responsive") %>
           </br>
           </br>
 
