--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <meta property="og:site_name" content="VR3 Technologies" />
     <meta property="og:type" content="image"/>
     <meta property="og:url" content="http://vr3.io" />
-    <meta property="og:image" content="http://www.vectorthree.com/vr3/img/main/vr3banner.jpg" />
+    <meta property="og:image" content="http://static.vr3.io/vr3/img/main/vr3banner.jpg" />
 
     <!--reCAPTCHA-->
     <script src='https://www.google.com/recaptcha/api.js'></script>
