--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
     
     <div class="video-source">
       <%= video_tag "videos/vr3.webm", class: "main-video", autoplay: true, loop: true, muted: true%>
-      <!--video autoplay loop muted src="http://vectorthree.com/vr3/img/main/vr3.webm" type="video/webm"></video-->
+      <!--video autoplay loop muted src="http://static.vr3.io/vr3/img/main/vr3.webm" type="video/webm"></video-->
     </div>
 
     <div class="video-overlay">
@@ -235,7 +235,7 @@
         <%= link_to project_path(p.id) do %>
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <%= image_tag "http://vectorthree.com/vr3/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
+              <%= image_tag "http://static.vr3.io/vr3/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
               <!--img class="img-responsive" src="http://placehold.it/350x250" alt="Google"-->
               <div class="caption">
                 <h3><u><%= p.title %></u></h3>
@@ -294,7 +294,7 @@
       </div>
     </div>
     <div class="row">
-      <form method="post" role="form" id="contact-form" action="http://vectorthree.com/vr3/php/contact.php">
+      <form method="post" role="form" id="contact-form" action="http://static.vr3.io/vr3/php/contact.php">
           <div class="col-md-6 col-md-offset-3">
             <div class="form-group">
               <input type="text" name="name" class="form-control" placeholder="Nombre * " id="name" required>
