--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -10,7 +10,7 @@
   <% @projects.each do |p| %>
   <div class="jumbotron">
     <div class="container">
-        <%= image_tag "http://vectorthree.com/vr3/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
+        <%= image_tag "http://static.vr3.io/vr3/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
         <h3><u><%= p.title %></u></h3>
         <h4>Cliente: <%= p.client %></h4>
         <h5>Agencia: <%= p.provider %></h5>
