--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -15,8 +15,8 @@
          
 
           <video controls muted autoplay>
-            <source src="http://vectorthree.com/vr3/img/projects/<%= @project.client %>/video.mp4" type="video/mp4">
-            <source src="http://vectorthree.com/vr3/img/projects/<%= @project.client %>/video.webm" type="video/webm">
+            <source src="http://static.vr3.io/vr3/img/projects/<%= @project.client %>/video.mp4" type="video/mp4">
+            <source src="http://static.vr3.io/vr3/img/projects/<%= @project.client %>/video.webm" type="video/webm">
             Your browser does not support the video tag.
           </video>
           </br>
