--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -54,7 +54,7 @@
       </div>
     </div>
     <div class="row">
-      <form method="post" role="form" id="contact-form" action="http://vectorthree.com/vr3/php/contact.php">
+      <form method="post" role="form" id="contact-form" action="http://static.vr3.io/vr3/php/contact.php">
           <div class="col-md-6 col-md-offset-3">
             <div class="form-group">
               <input type="text" name="name" class="form-control" placeholder="Nombre * " id="name" required>
