--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -15,7 +15,7 @@
         <div class="panel-body">
            <div class="row">
             <div class="col-lg-6 col-md-6">
-             <%= image_tag("http://www.vectorthree.com/vr3/img/main/vr3_office.jpg", :class => "img-responsive") %>
+             <%= image_tag("http://www.static.vr3.io/vr3/img/main/vr3_office.jpg", :class => "img-responsive") %>
             </div>
             <div class="col-lg-6 col-md-6">
               <h2><u><%= @job.position %></u></h2>
@@ -61,7 +61,7 @@
       </div>
     </div>
     <div class="row">
-      <form method="post" role="form" id="contact-form" action="http://vectorthree.com/vr3/php/contact.php">
+      <form method="post" role="form" id="contact-form" action="http://static.vr3.io/vr3/php/contact.php">
           <div class="col-md-6 col-md-offset-3">
             <div class="form-group">
               <input type="text" name="name" class="form-control" placeholder="Nombre * " id="name" required>
