--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -14,7 +14,7 @@
   <%= link_to project_path(p.id) do %>
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <%= image_tag "http://vectorthree.com/vr3/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
+      <%= image_tag "http://static.vr3.io/vr3/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
       <div class="caption">
         <h3><u><%= p.title %></u></h3>
         <h4>Cliente: <%= p.client %></h4>
