--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -12,8 +12,8 @@
 	<div class="container">
 		<div class="col-lg-12 col-md-12">
 			<video controls muted autoplay>
-			  <source src="http://vectorthree.com/vr3/img/projects/<%= @project.client %>/video.mp4" type="video/mp4">
-			  <source src="http://vectorthree.com/vr3/img/projects/<%= @project.client %>/video.webm" type="video/webm">
+			  <source src="http://static.vr3.io/vr3/img/projects/<%= @project.client %>/video.mp4" type="video/mp4">
+			  <source src="http://static.vr3.io/vr3/img/projects/<%= @project.client %>/video.webm" type="video/webm">
 				Your browser does not support the video tag.
 			</video>
 		</div>
@@ -55,7 +55,7 @@
       </div>
     </div>
     <div class="row">
-      <form method="post" role="form" id="contact-form" action="http://vectorthree.com/vr3/php/contact.php">
+      <form method="post" role="form" id="contact-form" action="http://static.vr3.io/vr3/php/contact.php">
           <div class="col-md-6 col-md-offset-3">
             <div class="form-group">
               <input type="text" name="name" class="form-control" placeholder="Nombre * " id="name" required>
