--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -11,11 +11,15 @@
 <div class="row">
 	<div class="container">
 		<div class="col-lg-12 col-md-12">
-			<video controls muted autoplay>
-			  <source src="http://static.vr3.io/vr3/img/projects/<%= @project.client %>/video.mp4" type="video/mp4">
-			  <source src="http://static.vr3.io/vr3/img/projects/<%= @project.client %>/video.webm" type="video/webm">
-				Your browser does not support the video tag.
-			</video>
+      <% if @project.project_video %>
+        <%= video_tag @project.project_video.url, controls: true, muted: true%>
+      <% else %>
+        <video controls muted>
+          <source src="http://static.vr3.io/vr3/img/projects/<%= @project.client %>/video.mp4" type="video/mp4">
+          <source src="http://static.vr3.io/vr3/img/projects/<%= @project.client %>/video.webm" type="video/webm">
+          Your browser does not support the video tag.
+        </video>
+      <% end %>
 		</div>
 
 		<div class="col-lg-12 col-md-12">
