--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -12,13 +12,15 @@
       <div class="col-sm-12 col-lg-12">
         <%= form_for @project do |p| %>
 
-         
-
-          <video controls muted autoplay>
-            <source src="http://static.vr3.io/vr3/img/projects/<%= @project.client %>/video.mp4" type="video/mp4">
-            <source src="http://static.vr3.io/vr3/img/projects/<%= @project.client %>/video.webm" type="video/webm">
-            Your browser does not support the video tag.
-          </video>
+          <% if @project.project_video.url %>
+            <%= video_tag @project.project_video.url, controls: true, muted: true%>
+          <% else %>
+            <video controls muted autoplay>
+              <source src="http://static.vr3.io/vr3/img/projects/<%= @project.client %>/video.mp4" type="video/mp4">
+              <source src="http://static.vr3.io/vr3/img/projects/<%= @project.client %>/video.webm" type="video/webm">
+              Your browser does not support the video tag.
+            </video>
+          <% end %>
           </br>
           </br>
 
@@ -30,6 +32,16 @@
               <%= p.text_field :title, autofocus: true, :class => "form-control validate", :placeholder => "Titulo" %>
             </div>        
           </div>
+
+          <div class="form-group">
+						<p>Portada del Proyecto (562x387, JPG, PNG)</p>
+						<%= p.file_field :project_image, :placeholder => "Imagen" %>
+					</div>
+
+					<div class="form-group">
+						<p>Video del Proyecto (640x480, WEBM, MOV, MP4)</p>
+						<%= p.file_field :project_video, :placeholder => "Video" %>
+					</div>
 
           <div class="form-group">
             <div class="input-group">
