--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -11,7 +11,7 @@
 <div class="row">
 	<div class="container">
 		<div class="col-lg-12 col-md-12">
-      <% if @project.project_video %>
+      <% if @project.project_video.url %>
         <%= video_tag @project.project_video.url, controls: true, muted: true%>
       <% else %>
         <video controls muted>
