--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -7,18 +7,28 @@
 </div>
 
 <section>
-  <% @projects.each do |p| %>
-  <div class="jumbotron">
+<div class="row">
     <div class="container">
-        <%= image_tag "http://static.vr3.io/vr3/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
-        <h3><u><%= p.title %></u></h3>
-        <h4>Cliente: <%= p.client %></h4>
-        <h5>Agencia: <%= p.provider %></h5>
-        <h5><%= p.date %></h5>
-        <%= link_to "Leer más...", project_path(p.id), class: "btn btn-primary " %>
-        <!--p><%= p.description.truncate(90) %></p-->
-      </div>
+        <% @projects.each do |p| %>
+            <%= link_to project_path(p) do %>
+            <div class="col-sm-4 col-md-4">
+                <div class="thumbnail">
+                    <% if p.image %>
+                        <%= image_tag p.image.url %>        
+                    <% else %>
+                        <%= image_tag "http://static.vr3.io/vr3/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
+                    <% end %>
+                    <div class="caption">
+                        <h3><u><%= p.title %></u></h3>
+                        <h4>Cliente: <%= p.client %></h4>
+                        <h5>Agencia: <%= p.provider %></h5>
+                        <h5><%= p.date %></h5>
+                        <p><%= p.description.truncate(90) %></p>
+                    </div>
+                </div>
+            </div>
+            <% end %>
+        <% end %>
     </div>
-  </div>
-  <% end %>
+</div>
 </section>
