--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -7,29 +7,29 @@
     </div>
   </div>
 </div>
-</br>
-
 <div class="row">
-  <% @projects.each do |p| %>
-  <%= link_to project_path(p.id) do %>
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <% if p.project_image %>
-        <%= image_tag p.project_image.url %>        
-      <% else %>
-        <%= image_tag "http://static.vr3.io/vr3/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
-      <% end %>
-      <div class="caption">
-        <h3><u><%= p.title %></u></h3>
-        <h4>Cliente: <%= p.client %></h4>
-        <h5>Agencia: <%= p.provider %></h5>
-        <h5><%= p.date %></h5>
-        <p><%= p.description.truncate(90) %></p>
-      </div>
+    <div class="container">
+        <% @projects.each do |p| %>
+            <%= link_to project_path(p) do %>
+            <div class="col-sm-4 col-md-4">
+                <div class="thumbnail">
+                    <% if p.image.url %>
+                        <%= image_tag p.image.url %>        
+                    <% else %>
+                        <%= image_tag "http://static.vr3.io/vr3/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
+                    <% end %>
+                    <div class="caption">
+                        <h3><u><%= p.title %></u></h3>
+                        <h4>Cliente: <%= p.client %></h4>
+                        <h5>Agencia: <%= p.provider %></h5>
+                        <h5><%= p.date %></h5>
+                        <p><%= p.description.truncate(90) %></p>
+                    </div>
+                </div>
+            </div>
+            <% end %>
+        <% end %>
     </div>
-  </div>
-  <% end %>
-  <% end %>
 </div>
 <br/>
 </div>
