--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -23,12 +23,12 @@
 
 					<div class="form-group">
 						<p>Portada del Proyecto (562x387, JPG, PNG)</p>
-						<%= p.file_field :project_image, :placeholder => "Imagen" %>
+						<%= p.file_field :image, :placeholder => "Imagen" %>
 					</div>
 
 					<div class="form-group">
 						<p>Video del Proyecto (640x480, WEBM, MOV, MP4)</p>
-						<%= p.file_field :project_video, :placeholder => "Video" %>
+						<%= p.file_field :video, :placeholder => "Video" %>
 					</div>
 
 					<div class="form-group">
@@ -47,8 +47,8 @@
 
 					<div class="form-group">
 						<div class="input-group">
-							<span class="input-group-addon">Cliente</span>
-							<%= p.text_field :client, autofocus: true, :class => "form-control validate", :placeholder => "Cliente" %>
+							<span class="input-group-addon">Cliente *</span>
+							<%= p.text_field :client, :required => true, autofocus: true, :class => "form-control validate", :placeholder => "Cliente" %>
 						</div>
 					</div>
 
