--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -33,7 +33,7 @@
 
 					<div class="form-group">
 						<div class="input-group">
-							<span class="input-group-addon">Descripción</span>
+							<span class="input-group-addon">Descripción (Usa <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">Markdown</a>)</span>
 							<%= p.text_area :description, autofocus: true, :class => "form-control validate", :placeholder => "Descripción", rows: 5, cols: 10 %>
 						</div>
 					</div>
