--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -38,7 +38,7 @@
               <%= link_to "Más información", @project.link %>
             <% end %>
 			  </div>
-			</div>git 
+			</div>
 		</div>
 		<div class="col-lg-12 col-md-12 text-center return-link">
 			<%= link_to "Regresar a proyectos", root_path(:anchor => "projects") %>
