Improved jobs, added members to company improved articles

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -9,29 +9,33 @@
   <div class="container">
     <div class="row text-center">
       <div class="col-sm-12">
-        <p>Intenta llenar todos los campos del articulo.</p>
-        <%= form_for @article do |p| %>
+        <%= form_for @article do |a| %>
+
+        	<div class="form-group">
+						<p>Logo (200x300, JPG, PNG)</p>
+						<%= a.file_field :logo, :placeholder => "Logo" %>
+					</div>
 
           <div class="form-group">
-            <%= p.text_field :title, autofocus: true, :class => "form-control validate", :placeholder => "Titulo"%>
+            <%= a.text_field :link, autofocus: true, :class => "form-control validate", :placeholder => "Enlace"%>
           </div>
 
           <div class="form-group">
-            <%= p.text_field :author, autofocus: true, :class => "form-control validate", :placeholder => "Autor"%>
+            <%= a.text_field :source, autofocus: true, :class => "form-control validate", :placeholder => "Fuente"%>
+          </div>
+
+          <!--div class="form-group">
+            <%= a.text_field :title, autofocus: true, :class => "form-control validate", :placeholder => "Titulo"%>
           </div>
 
           <div class="form-group">
-            <%= p.text_field :source, autofocus: true, :class => "form-control validate", :placeholder => "Fuente"%>
+            <%= a.text_field :author, autofocus: true, :class => "form-control validate", :placeholder => "Autor"%>
           </div>
+
 
           <div class="form-group">
-            <%= p.text_field :link, autofocus: true, :class => "form-control validate", :placeholder => "Enlace"%>
-          </div>
-
-          <div class="form-group">
-            <%= p.text_area :body, autofocus: true, :class => "form-control validate", :placeholder => "Nota", rows: 5, cols: 10 %>
-          </div>
-
+            <%= a.text_area :body, autofocus: true, :class => "form-control validate", :placeholder => "Nota", rows: 5, cols: 10 %>
+          </div-->
 
           <%= link_to("Cancelar", articles_path , class: "btn btn-lg btn-danger") %>
           <button class="btn btn-lg btn-primary float-right" type="submit" name="action">Crear Articulo</button>
@@ -40,3 +44,6 @@
     </div>
   </div>
 </section>
+
+
+
