--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <meta property="og:title" content="VR3 | Video Web y VR" />
     <meta property="og:site_name" content="VR3 Technologies" />
     <meta property="og:type" content="image"/>
-    <meta property="og:url" content="http://vr3.io" />
+    <meta property="og:url" content="https://vr3.io" />
     <meta property="og:image" content="http://static.vr3.io/vr3/img/main/vr3banner.jpg" />
 
     <!--reCAPTCHA-->
@@ -52,8 +52,8 @@
     <%= yield %>
   </body>
 
+  <%= render partial: "partials/contact" %>
   <%= render partial: "partials/footer" %>
-
 
 </html>
 
