--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,21 +9,16 @@
 <div class="container">
   <div class="row text-center">
     <h3>Articulos</h3>
+    <div class="row">
       <% @articles.each do |a| %>
-        <%= link_to article_path(a.id) do %>
-          <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-              <%= image_tag a.image_url, :class => "img-responsive"%>
-              <div class="caption">
-                <h3><u><%= a.title %></u></h3>
-                <h4><%= a.source %></h4>
-                <h5><%= a.link %></h5>
-                <h5><%= a.created_at %></h5>
-                <p><%= a.body.truncate(90) %></p>
-              </div>
-            </div>
+        <div class="col-sm-3 col-md-3">
+          <div class="thumbnail">
+            <%= link_to a.link do %>
+              <%= image_tag a.logo.url, :class => "img-responsive"%>
+            <% end %>
           </div>
-        <% end %>
+        </div>
       <% end %>
+    </div>
   </div>
 </div>
