--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -11,17 +11,20 @@
     <h3>Vacantes</h3>
     <div class="text-center bio">
       <p>En <strong><%= link_to "VR3", root_path %></strong> siempre estamos buscando mentes creativas. Descubre más sobre las vacantes abiertas.</p>
-    </div>
-    <h1>Por el momento, no hay vacantes abiertas. Vuelve pronto !</h1>
-    <div class="col-sm-4 col-md-6 ">
-      <!--#%= @jobs %-->
-      <div class="thumbnail">
-        <div class="caption">
-          <h3>Sr Web Developer (RoR)</h3>
-          <p>Increible pasión por el desarrollo web. Especialmente con clientes REST y diseño de APIs.</p>
-          <a class="btn btn-lg">Leer más</a>
-        </div>
-      </div>
-    </div>
+    </div>    
+        <% @jobs.each do |j| %>
+          <div class="col-sm-6 col-md-6">
+            <div class="thumbnail">
+
+            <h3><%= link_to j.position, job_path(j) %></h3>
+            <h4><%= j.location %></h4>
+            <p><%= markdown(j.overview.truncate(180)) %></p>
+            <p><%= markdown(j.qualifications.truncate(180)) %></p>
+            <p><%= markdown(j.responsabilities.truncate(180)) %></p>
+            <h4><%= link_to 'Leer más', job_path(j) %></h4>
+            </br>
+            </div>
+          </div>
+        <% end %>
   </div>
 </div>
