--- a/app/views/pages/company.html.erb
+++ b/app/views/pages/company.html.erb
@@ -1,5 +1,4 @@
 <div id="companypage"></div>
-
 <div id="full-blue">
   <div class="container">
     <div class="intro-text">
@@ -12,11 +11,8 @@
 	<div class="row text-center">
 		<h3>Compañia</h3>
 		<div class="bio">
-			<h5><strong><%= link_to "VR3", root_path %></strong> es un startup de Realidad Virtual en la Ciudad de México.</h5>
-			<p>Creamos experiencias interactivas para agencias, publicidad, mercadotecnia, casas productoras y cualquier 
-			empresa, compañía o particular.</p>
-			<p>VR3 nació como <strong>Vectorthree</strong>. Imaginado en una clase de videojuegos hace más de 4 años, Vectorthree fue formado por Oscar Chavez, Patrick Moss y Roberto Ramos, tres estudiantes del ITESM CCM, bajo el nombre legal de <strong>CG Logística SAPI de CV</strong>. 
-			Así como también fundamos <strong><a href="mxvr.co" target="_blank">MXVR</a></strong>, una comunidad abierta al público sobre Realidad Virtual y Realidad Aumentada.</p>
+      <p class="lead"><strong><%= link_to "VR3", root_path %></strong> es un estudio de innovación basado en la Ciudad de México<a href="https://goo.gl/maps/SXjjxz3Yrf92">,</a> que desarrolla aplicaciones que agregan valor a compañias manejadas por la tecnología y a organizaciones gubernamentales.</p>
+      <p class="lead">Con más de 4 años operando, <%= link_to "VR3", root_path %> sobresale como una compañia exitosa de desarrollo tecnológico.</p>
 		</div>
     <br>
 		
@@ -24,9 +20,10 @@
 		<div class="col-sm-6 col-md-6">
 			<%= image_tag "company/oscar.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
 			<h3>Oscar Chavez</h3>
-			<h5>Cofounder & CEO @ <%= link_to "VR3", root_path %></h5>
-			<p>Fullstack Web Developer. Engineering. Admin.</p>
-			<p>RoR. JS. C#. REST/API. SQL</p>
+			<h5>Cofounder @ <%= link_to "VR3", root_path %></h5>
+      <h5>Fullstack Developer & SysAdmin</h5>
+			<p>Architecture. Engineering. Innovation. Admin.</p>
+			<p>RoR. JS. C#. REST/API. SQL. Bash/UNIX</p>
 			<p>Cofundador <%= link_to "MXVR", "http://mxvr.co" %>.</p>
 			<ul class="list-inline social-buttons">
         <li><a href="http://github.com/oschvr" target="_blank"><i class="fa fa-github"></i></a></li>
@@ -38,8 +35,9 @@
 		<div class="col-sm-6 col-md-6">
 			<%= image_tag "company/patrick.png", :class => "img-responsive img-circle", :style => "max-width: 50%; transform:translate(50%,0)" %>
 			<h3>Patrick Moss</h3>
-			<h5>Cofounder & CTO @ <%= link_to "VR3", root_path %></h5>
-			<p>Unity3D Developer. Innovation. Sales</p>
+			<h5>Cofounder @ <%= link_to "VR3", root_path %></h5>
+      <h5>Blockchain Developer & Networks</h5>
+			<p>Smart Contracts. Deep Learning. </p>
 			<p>C#. JS. C++. PHP. Unity. OpenGL.</p>
 			<p>Cofundador <%= link_to "MXVR", "http://mxvr.co" %>.</p>
 			<ul class="list-inline social-buttons">
@@ -47,17 +45,42 @@
         </li>
       </ul>
 		</div>
-  </div>
-  
+  </div>  
   </br></br>
-  
+  <div class="row text-center">
+	
+    <!--Rodrigo Hijar-->
+		<div class="col-sm-6 col-md-6">
+			<%= image_tag "company/rhijar.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
+			<h3>Rodrigo Hijar</h3>
+			<h5>Business Consultant & Manager</h5>
+			<p>Business Consulting. Project Management. Expansion and Growth</p>
+      <p>Client segmentation, go-to-market and commercial strategy among others.</p>
+			<ul class="list-inline social-buttons">
+        <!--li><a href="http://github.com/oschvr" target="_blank"><i class="fa fa-github"></i></a></li-->
+        <li><a href="http://twitter.com/RodrigoHijar" target="_blank"><i class="fa fa-twitter"></i></a></li>
+      </ul>
+		</div>
+		
+    <!--Rodrigo Llanos-->
+		<div class="col-sm-6 col-md-6">
+			<%= image_tag "company/rllanos.png", :class => "img-responsive img-circle", :style => "max-width: 50%; transform:translate(50%,0)" %>
+			<h3>Rodrigo Llanos</h3>
+			<h5>Finance Consultant & Compliance</h5>
+			<ul class="list-inline social-buttons">
+        <li><a href="https://twitter.com/rodrigollanosb" target="_blank"><i class="fa fa-twitter"></i></a>
+        </li>
+      </ul>
+		</div>
+  </div>
+  <br><br>
   <div class="row text-center">
 
     <!--Gustavo L'Eglise-->
     <div class="col-sm-6 col-md-6">
       <%= image_tag "company/gustavo.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
       <h3>Gustavo L'Eglise</h3>
-      <h5>Developer @ <%= link_to "VR3", root_path %></h5>
+      <h5>Frontend Developer</h5>
       <p>Unity3D Developer. Web Developer</p>
       <p>MEAN. Unity3D. C#.</p>
       <ul class="list-inline social-buttons">
@@ -72,22 +95,20 @@
     <div class="col-sm-6 col-md-6">
       <%= image_tag "company/rodrigo.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
       <h3>Rodrigo Moreno</h3>
-      <h5>Cofounder @ <%= link_to "Estudio Cromosoma", "http://www.estudiocromosoma.com" %></h5>
-      <p>3D Artist & Motion Graphics</p>
+      <h5>3D Artist & Motion Graphics</h5>
+      <p>Cofounder @ <%= link_to "Estudio Cromosoma", "http://www.estudiocromosoma.com" %></p>
       <p>Maya. C4D. Ps. Ai. Ae.</p>
       <ul class="list-inline social-buttons">
         <li><a href="http://www.estudiocromosoma.com" target="_blank"><i class="fa fa-hand-pointer-o"></i></a>
         </li>
         <li><a href="http://twitter.com/CromosomaMX" target="_blank"><i class="fa fa-twitter"></i></a>
         </li>
-        <li><a href="http://instagram.com/rodro1126" target="_blank"><i class="fa fa-instagram"></i></a>
-        </li>
       </ul>
     </div>
         
 		<!--Roberto Ramos-->
-		<!--div class="col-sm-3 col-md-4">
-			<%= image_tag "http://vr3.io/img/team/bob.png", :class => "img-responsive img-circle" %>
+		<!--div class="col-sm-6 col-md-4">
+			<%= image_tag "company/bob.png", :class => "img-responsive img-circle" %>
 			<h3>Roberto Ramos</h3>
 			<h5>Comevergas</h5>
 			<p>Director Tecnología. Desarrollador Principal. </p>
@@ -97,10 +118,7 @@
         <li><a href="http://twitter.com/ostocino" target="_blank"><i class="fa fa-twitter"></i></a>
         </li>
       </ul>
-		</div>
-	</div-->
-
+		</div-->
+	</div>
+  <br>
 </div>
-</br>
-
-<hr>
