--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -5,29 +5,12 @@
     </div>
   </div>
 </div>
-<!-- Subservice:Live Section -->
-<section id="live" class="bg-light-gray">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Video Web <span class="btn btn-danger">LIVE</span> y en <span class="btn btn-info">VOD</span></h2>
-        <!--h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3-->
-      </div>
-      <div class="col-sm-6 col-md-6 col-lg-6">
-        
-      </div>
-      <div class="col-sm-6 col-md-6 col-lg-6">
-        
-      </div>
-    </div>
-  </div>
-</section>
 <!-- Subservice:Marketing Section -->
 <section id="marketing">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Automatización y AI </h2>
+        <h2 class="section-heading">Automatización e Inteligencia Artificial </h2>
         <!--h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3-->
       </div>
     </div>
@@ -38,7 +21,7 @@
   <div class="container">
     <div class="row">
       <div class="text-center">
-        <h2 class="section-heading">Creacion de Aplicaciones de VR y AR</h2>
+        <h2 class="section-heading">Aplicaciones de VR y AR</h2>
       </div>
     </div>
   </div>
@@ -48,7 +31,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Renta y Activaciones Comerciales</h2>
+        <h2 class="section-heading">Desarrollo de Bases de Datos Distribuidas</h2>
         <!--h3 class="section-subheading normal-text">Personas y empresas que confiaron en nosotros.</h3-->
       </div>
     </div>
