--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -13,9 +13,9 @@
       <div class="col-md-4 col-sm-4">
         <h3>SERVICIOS</h3>
         <ul class="list-unstyled quicklinks">
-          <a href="/services"><li>Streaming Web y VR</li></a>
-          <a href="/services"><li>VR / AR / MR</li></a>
-          <a href="/services"><li>Renta y Activaciones Comerciales</li></a>
+          <a href="/services"><li>VR & AR </li></a>
+          <a href="/services"><li>ML & AI</li></a>
+          <a href="/services"><li>Blockchain</li></a>
         </ul>
       </div>
       <div class="col-md-4 col-sm-4">
@@ -23,7 +23,7 @@
         <ul class="list-unstyled quicklinks">
           <a href="http://mxvr.co" target="_blank"><li>MXVR</li></a>
           <!--a href="http://shop.vr3.io" target="_blank"><li>Tienda</li></a-->
-          <a href="http://blog.vr3.io" target="_blank"><li>Blog</li></a>
+          <!--a href="http://blog.vr3.io" target="_blank"><li>Blog</li></a-->
           <!--a href="/press"><li>Prensa</li></a-->
         </ul>     
       </div>
